@@ -9,13 +9,15 @@ import cn.hutool.aop.ProxyUtil;
 import cn.hutool.core.text.StrBuilder;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.extra.spring.SpringUtil;
+import com.alibaba.druid.pool.DruidDataSource;
 import io.netty.util.concurrent.FastThreadLocal;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 
 import javax.sql.DataSource;
 import java.lang.reflect.Field;
-import java.util.HashMap;
+import java.lang.reflect.Method;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * @author ckn
@@ -23,8 +25,7 @@ import java.util.Map;
 public class DataSourceConnection {
     private static final FastThreadLocal<NamedParameterJdbcTemplate> jdbcTemplateThreadLocal = new FastThreadLocal<>();
     private static final FastThreadLocal<DataSource> slaveDataSourceThreadLocal = new FastThreadLocal<>();
-    private static final FastThreadLocal<NamedParameterJdbcTemplate> jdbcTemplateSlaveThreadLocal = new FastThreadLocal<>();
-    public static final Map<String, NamedParameterJdbcTemplate> dataSourceSalveTemplateMap = new HashMap<>();
+    public static final Map<String, NamedParameterJdbcTemplate> dataSourceSalveTemplateMap = new ConcurrentHashMap<>();
 
     /**
      * 获取NamedParameterJdbcTemplate
@@ -32,7 +33,7 @@ public class DataSourceConnection {
      * @return 获取到的信息
      */
     public static NamedParameterJdbcTemplate getJdbcTemplate() {
-        FastMapperParam fastMapperParam = FastMapperParam.get();
+        FastMapperParam<?> fastMapperParam = FastMapperParam.get();
         Boolean master = fastMapperParam.getMaster();
         NamedParameterJdbcTemplate jdbcTemplate = null;
         if (DataSourceContext.getDataSource() != null) {
@@ -46,21 +47,35 @@ public class DataSourceConnection {
             return jdbcTemplate;
         } else {
             DataSource dataSource = slaveDataSourceThreadLocal.get();
+            if (dataSource == null) {
+                return dataSource();
+            }
             String slaveKey = getSlaveKey(dataSource);
-            for (String compare : dataSourceSalveTemplateMap.keySet()) {
-                if (StrUtil.equals(slaveKey, compare)) {
-                    jdbcTemplate = dataSourceSalveTemplateMap.get(compare);
-                }
-            }
-            if (jdbcTemplate == null) {
-                jdbcTemplate=new NamedParameterJdbcTemplate(dataSource);
-                dataSourceSalveTemplateMap.put(slaveKey,jdbcTemplate);
-            }
+            jdbcTemplate = dataSourceSalveTemplateMap.computeIfAbsent(slaveKey, key -> new NamedParameterJdbcTemplate(dataSource));
         }
         return jdbcTemplate;
     }
 
     private static String getSlaveKey(DataSource dataSource) {
+        if (dataSource instanceof DruidDataSource) {
+            DruidDataSource druidDataSource = (DruidDataSource) dataSource;
+            String druidKey = buildStableKey(druidDataSource.getUsername(), druidDataSource.getPassword(), druidDataSource.getUrl());
+            if (StrUtil.isNotBlank(druidKey)) {
+                return druidKey;
+            }
+        }
+
+        String methodUsername = invokeStringGetter(dataSource, "getUsername");
+        String methodPassword = invokeStringGetter(dataSource, "getPassword");
+        String methodUrl = invokeStringGetter(dataSource, "getJdbcUrl");
+        if (StrUtil.isBlank(methodUrl)) {
+            methodUrl = invokeStringGetter(dataSource, "getUrl");
+        }
+        String methodKey = buildStableKey(methodUsername, methodPassword, methodUrl);
+        if (StrUtil.isNotBlank(methodKey)) {
+            return methodKey;
+        }
+
         Class<? extends DataSource> dataSourceClass = dataSource.getClass();
         Field[] fields = dataSourceClass.getDeclaredFields();
         String username = null;
@@ -88,10 +103,30 @@ public class DataSourceConnection {
                 e.printStackTrace();
             }
         }
+        String reflectionKey = buildStableKey(username, password, jdbcUrl);
+        if (StrUtil.isNotBlank(reflectionKey)) {
+            return reflectionKey;
+        }
+
+        // fallback to avoid empty key collision across different data sources
+        return dataSource.getClass().getName() + "@" + System.identityHashCode(dataSource);
+    }
+
+    private static String invokeStringGetter(DataSource dataSource, String methodName) {
+        try {
+            Method method = dataSource.getClass().getMethod(methodName);
+            Object value = method.invoke(dataSource);
+            return value == null ? null : String.valueOf(value);
+        } catch (Exception ignore) {
+            return null;
+        }
+    }
+
+    private static String buildStableKey(String username, String password, String jdbcUrl) {
         if (StrUtil.isNotBlank(username) && StrUtil.isNotBlank(password) && StrUtil.isNotBlank(jdbcUrl)) {
             return new StrBuilder(username).append(password).append(jdbcUrl).toString();
         }
-        return "";
+        return null;
     }
 
     public static NamedParameterJdbcTemplate dataSource() {
@@ -102,7 +137,7 @@ public class DataSourceConnection {
     }
 
     public static DataSource getDataSource(){
-        FastMapperParam fastMapperParam = FastMapperParam.get();
+        FastMapperParam<?> fastMapperParam = FastMapperParam.get();
         Boolean master = fastMapperParam.getMaster();
         if (master) {
             return getMasterDataSource();
@@ -121,7 +156,6 @@ public class DataSourceConnection {
 
     public static void clearSlaveThreadLocal(){
         slaveDataSourceThreadLocal.remove();
-        jdbcTemplateSlaveThreadLocal.remove();
     }
 
     private static DataSource getMasterDataSource() {
@@ -133,15 +167,17 @@ public class DataSourceConnection {
         return master;
     }
 
-    private static Class<? extends DaoActuator> daoActuator = JdbcDaoActuator.class;
+    @SuppressWarnings("unchecked")
+    private static Class<? extends DaoActuator<?>> daoActuator =
+            (Class<? extends DaoActuator<?>>) (Class<?>) JdbcDaoActuator.class;
 
-    public static void setDaoActuator(Class<? extends DaoActuator> daoActuator) {
+    public static void setDaoActuator(Class<? extends DaoActuator<?>> daoActuator) {
         DataSourceConnection.daoActuator = daoActuator;
     }
 
-    public static <T> DaoActuator<T> getDaoActuator() {
+    public static DaoActuator<?> getDaoActuator() {
         try {
-            return ProxyUtil.proxy(daoActuator.newInstance(), MapperActuatorAspect.class);
+            return ProxyUtil.proxy(daoActuator.getDeclaredConstructor().newInstance(), MapperActuatorAspect.class);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
